# Fluid-simulation-and-rendering

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
assets/shaders/: blur.frag  cell.frag  cell.vert  fluid_comp.frag  fluid_normals.frag  lit_textured.frag  lit_textured.vert  particle.frag  particle.vert  particle_depth.frag  particle_point.frag  particle_point.vert  particle_quad.frag  particle_quad.vert  particle_thickness.frag  reflective.frag  reflective.vert  screen_quad.frag  screen_quad.vert  skybox.frag  skybox.vert  unlit_textured.frag  unlit_textured.vert  unlit_vertex_color.frag  unlit_vertex_color.vert  whitewater_quad.frag  whitewater_quad.vert
include/: Camera.hpp  Model.hpp  Renderer.hpp  Shader.hpp  UIRenderer.hpp
include/MPM/: Cell.hpp  MPMSimulation.cuh  MPMSimulation.hpp  Particle.hpp  ParticleMaterial.hpp
include/utils/: Cubemap.hpp  CudaCheck.cuh  Mesh.hpp  Texture.hpp  Transform.hpp  Vertex.hpp  deviceQuery.cuh  helper_cuda.h
src/: Camera.cpp  Model.cpp  Renderer.cpp  Shader.cpp  UIRenderer.cpp  main.cpp
src/MPM/: MPMSimulation.cpp  MPMSimulation.cu
src/utils/: Cubemap.cpp  Mesh.cpp  Texture.cpp  deviceQuery.cu  stb_image.cpp
